testdata/baselines/reference/submodule/compiler/javascriptImportDefaultBadExport.errors.txt
/a.js(2,8): error TS2540: Cannot assign to 'exports' because it is a read-only property.


==== /a.js (1 errors) ====
    const alias = {};
    module.exports = alias;
           ~~~~~~~
!!! error TS2540: Cannot assign to 'exports' because it is a read-only property.
    
==== /b.js (0 errors) ====
    import a from "./a";
    